# prompt-author

./: .python-version  pyproject.toml
examples/: responsible-ai-blog.yaml
prompt_author/: __init__.py  cli.py  config.py
prompt_author/personas/: __init__.py  default.py  persona.py  pirate.py
prompt_author/templates/: __init__.py
prompt_author/templates/medium_blog_post/: __init__.py  abstract.md  blog.md  concrete_examples.md  outline.md  select_title.md  template.py  title.md
